# ADHDer

./: .gitignore  ADHD_top1000posts_2020-03-01_2025-08-01.csv  ADHD_top1000posts_all_time.csv  ADHD_top2posts_2020-03-01_2025-08-01.csv  ADHD_top2posts_2020-03-01_2025-08-01_comments.csv  README.md  adhd_top100.csv  adhd_top100_with_id.csv  adhd_top_2020toNow.csv  askreddit_cleaned.csv  askreddit_posts.csv  bertopic_posts.ipynb  clean_csv.py  main.py  pyproject.toml  reddit_scraper.py  scrape_adhd_top.py  scrape_top100.py
src/: __init__.py  scrape_all_comments.py  scrape_top_posts.py  utils.py
