[project]
name = "my-reddit-scraper"
version = "0.1.0"
description = ""
authors = [
    {name = "Shizhao Liu",email = "65791435+szhao-liu@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "praw (>=7.8.1,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
