[project]
name = "my-reddit-scraper"
version = "0.1.0"
description = ""
authors = [
    {name = "Shizhao Liu",email = "65791435+szhao-liu@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "praw (>=7.8.1,<8.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "ipython (>=9.4.0,<10.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "bertopic (>=0.17.3,<0.18.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"

